--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,12 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+
+    <link
+      href="https://fonts.googleapis.com/css?family=Caesar Dressing|Montserrat"
+      rel="stylesheet"
+    />
+
     <title>
       Ambrosians - Exiled from Olympus. Forged by the fires of the Underworld.
     </title>
