Added analytics script

--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,21 @@
       rel="stylesheet"
     />
 
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-V8B3MX8W6E"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || []
+      function gtag() {
+        dataLayer.push(arguments)
+      }
+      gtag('js', new Date())
+
+      gtag('config', 'G-V8B3MX8W6E')
+    </script>
+
     <title>
       Ambrosians - Exiled from Olympus. Forged by the fires of the Underworld.
     </title>
